RESOLVED FIXED49152
Assert that a non-null PassRefPtr<Document> has a non-null frame in Frame::setDocument()
https://bugs.webkit.org/show_bug.cgi?id=49152
Summary Assert that a non-null PassRefPtr<Document> has a non-null frame in Frame::se...
Daniel Bates
Reported 2010-11-07 18:38:24 PST
We should assert that a non-null Document object has a non-null frame (i.e. that Document::frame() is not null) in Frame::setDocument().
Attachments
Patch (1.32 KB, patch)
2010-11-07 18:48 PST, Daniel Bates
no flags
Patch (1.33 KB, patch)
2010-11-07 18:49 PST, Daniel Bates
abarth: review+
Daniel Bates
Comment 1 2010-11-07 18:48:18 PST
Created attachment 73201 [details] Patch This change does not cause any DRT regressions on my Mac. As far as I can tell from looking at the callers of Frame::setDocument() and the Document creation process, it doesn't make sense for Frame::setDocument() to be passed a non-null PassRefPtr<Document> whose Document has a null frame (i.e. Document::frame() == 0).
Daniel Bates
Comment 2 2010-11-07 18:49:56 PST
Created attachment 73202 [details] Patch Updated title of bug in change log.
Adam Barth
Comment 3 2010-11-07 19:08:39 PST
Comment on attachment 73202 [details] Patch Thanks.
Daniel Bates
Comment 4 2010-11-07 20:18:16 PST
Comment on attachment 73202 [details] Patch Will land by hand.
Daniel Bates
Comment 5 2010-11-07 20:32:39 PST
Note You need to log in before you can comment on or make changes to this bug.