2010-11-07  Daniel Bates  <dbates@rim.com>

Reviewed by Adam Barth.

        Assert that a non-null PassRefPtr<Document> has a non-null frame in Frame::setDocument()
        https://bugs.webkit.org/show_bug.cgi?id=49152

        Add an ASSERT to ensure that a non-null Document has a non-null Frame
        in Frame::setDocument().

        Currently, whenever Frame::setDocument() is called with a non-null
        Document the Document has a non-null Frame. We should assert this
        invariant.

        * page/Frame.cpp:
        (WebCore::Frame::setDocument):


Canonical link: https://commits.webkit.org/61980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71493 268f45cc-cd09-0410-ab3c-d52691b4dbfc